# vulnerss

./: Cargo.toml  README.md
src/: ghsa.rs  main.rs
